src/test/ui/issues/issue-79744.stderr
error: literal out of range for `i8`
  --> $DIR/issue-79744.rs:3:14
   |
LL |     let e2 = 230;
   |              ^^^
   |
   = note: `#[deny(overflowing_literals)]` on by default
   = note: the literal `230` does not fit into the type `i8` whose range is `-128..=127`
   = help: consider using the type `u8` instead

error: aborting due to previous error

